[package]
name = "gnostr-relay"
version = "1875.947943.545331"
edition = "2021"
authors = ["Arron zhang <arronzhang@me.com>", "gnostr <admin@gnostr.org>"]
description = "gnostr:git+nostr protocol relay"
readme = "README.md"
homepage = "https://gnostr.org"
repository = "https://github.com/gnostr-org/gnostr.git"
license = "MIT"
keywords = ["nostr", "nostr-relay", "server", "gnostr", "git"]
categories = ["network-programming", "web-programming"]

## [features] ## dependency lindera-unidic v0.32.3 unavailable
## search = ["nostr-relay/search"]

[dependencies]
actix-http = { version = "3.9.0" }
actix-web = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
nostr-relay = { version = "0.4.8", default-features = false }
num_cpus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
