[package]
name = "gnostr-scopetime"
version = "1906.925289.572444"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "log runtime of arbitrary scope"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
license = "MIT"
readme = "README.md"
categories = ["development-tools::profiling"]
keywords = ["profiling", "logging"]

[features]
default =[]
enabled =[]

[dependencies]
log = "0.4"
