[package]
name = "gnostr-scopetime"
version.workspace = true
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "log runtime of arbitrary scope"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
license = "MIT"
readme = "README.md"
categories = ["development-tools::profiling"]
keywords = ["profiling", "logging"]

[lib]
name = "gnostr_scopetime"
path = "src/lib.rs"

[features]
default = []
enabled = []

[dependencies]
log = "0.4"
