[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "blazing fast terminal-ui for git"
rust-version = "1.79"
exclude = [".github/*", ".vscode/*", "assets/*"]
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "os::unix-apis"]
keywords = ["git", "gui", "cli", "terminal", "ui", "pty", "automation", "testing", "expect", "pexpect"]

[dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
dialoguer = "0.10.4"
directories = "5.0.1"
futures = "0.3.28"
git2 = "0.18.3"
nostr = "0.34.1"
nostr-database = "0.34.0"
nostr-sdk = "0.34.0"
nostr-sqlite = "0.34.0"
once_cell = "1.18.0"
rand = "0.8"
comma = "1.0"
regex = "1"
tempfile = "3"
thiserror = "1.0.34"
which = { version = "5.0", optional = true }
##gnostr has a gnostr::ws library that is a copy of simple-websockets
##replace the dependency below
gnostr = { path = "../" }
strip-ansi-escapes = "0.2.0"
tokio = "1.33.0"
tungstenite = "0.20.1"
expectrl = "0.8.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
