[package]
name = "gnostr-blossom-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
#blossom-rs = { path = "..", features = ["client"] }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
bech32 = "0.11"
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
arboard = "3"
open = "5"
blossom-rs = "0.5.6"
filetreelist = { package = "gnostr-filetreelist", version = " 1893.935010.246953", path = "../filetreelist" }
crossbeam-channel = "0.5"
asyncgit = { package = "gnostr-asyncgit", version = "1893.935010.246953", path = "../asyncgit" }
