[package]
name = "gnostr-blossom-tui"
version = "1878.945703.533630"
edition = "2024"
description = "Gitui-inspired terminal UI for Blossom blob storage"
homepage = "https://github.com/gnostr-org/gnostr"
license = "MIT"
repository = "https://github.com/gnostr-org/gnostr.git"

[lib]
name = "gnostr_blossom_tui"
path = "./src/lib.rs"

[dependencies]
arboard = "3"
asyncgit = { package = "gnostr-asyncgit", version = "1878.945703.533630", path = "../asyncgit" }
bech32 = "0.11"
blossom-rs = "0.5.6"
crossbeam-channel = "0.5"
crossterm = "0.29"
filetreelist = { package = "gnostr-filetreelist", version = "1878.945703.533630", path = "../filetreelist" }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
hex = "0.4"
open = "5"
#blossom-rs = { path = "..", features = ["client"] }
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
  "rustls-tls",
] }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
