#[workspace]
[package]
name = "gnostr-types"
version = "1905.926180.332424"
edition = "2021"
homepage = "https://github.com/gnostr-org/gnostr"
authors = ["gnostr <admin@gnostr.org>", "Mike Dilger <mike@mikedilger.com>"]
description = "gnostr: a git+nostr workflow utility"
repository = "https://github.com/gnostr-org/gnostr"
documentation = "https://docs.rs/gnostr-bins"
readme = "README.md"
keywords = [ "git", "nostr", "gnostr" ]
license = "MIT"

[features]
default = []

[dependencies]
aes = "0.8"
base64 = "0.22"
bech32 = "0.11"
cbc = { workspace = true }
chacha20 = "0.9"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
core-net = "0.1"
derive_more = "0.99"
hex = "0.4.3"
hmac = "0.12"
lazy_static = "1.4"
lightning-invoice = "0.33.2"
#lightning-invoice = { path = "../lightning/lightning-invoice", version = "0.31.0-beta" }
#lightning = { version = "0.0.123-beta", path = "../lightning/lightning" }
linkify = "0.10"
log = { workspace = true }
#nip44 = { package = "gnip44", version = "0.0.72" }
num_cpus = "1"
pbkdf2 = { version = "0.12", default-features = false, features = [ "hmac", "sha2", "std" ] }
rand = "0.8"
rand_core = "0.6"
regex = "1.10"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
scrypt = "0.11"
secp256k1 = { workspace = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.10.9"
speedy = { version = "0.8.7", optional = true }
thiserror = "1.0"
thread-priority = "1.0"
tiny_http = { workspace = true }
tokio-tungstenite = { workspace = true }
unicode-normalization = "0.1"
url = "2.5"
zeroize = "1.7"
anyhow = "1.0"
serial_test = "3.4.0"
http = "1.0"
ascii = "1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256", "arithmetic"] }
futures-util = "0.3"
tracing = "0.1"

##from gnip44
##[dependencies.base64]
##version = "0.22"
##
##[dependencies.chacha20]
##version = "0.9"

[dependencies.constant_time_eq]
version = "0.3"

[dependencies.hkdf]
version = "0.12"

##[dependencies.hmac]
##version = "0.12"

##[dependencies.rand_core]
##version = "0.6"
##features = ["getrandom"]

##[dependencies.secp256k1]
##version = "0.29"

##[dependencies.sha2]
##version = "0.10"

##[dependencies.thiserror]
##version = "1.0"

[dev-dependencies.hex]
version = "0.4"

[dev-dependencies.secp256k1]
workspace = true
##version = "0.29.1"
##features = ["hashes", "global-context", "rand-std", "serde"]


[dev-dependencies.serde_json]
version = "1.0"

[build-dependencies]
sha2 = "0.10.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4.3"

## # Force scrypt to build with release-like speed even in dev mode
## [profile.dev.package.scrypt]
## opt-level = 3
## debug-assertions = false
## overflow-checks = false
