[package]
name = "gnostr-types"
edition = "2024"
version.workspace = true
description = "gnostr Nostr protocol types"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr.git"
license = "MIT"
readme = "../README.md"
exclude.workspace = true

[dependencies]
anyhow = "1.0.100"
aes = "0.8"
base64 = { workspace = true }
bech32 = { workspace = true }
bip39 = { workspace = true }
bitcoin_hashes = { workspace = true }
bitflags = "2"
bytes = "1.5"
cbc = { workspace = true }
chacha20 = "0.9"
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
const_format = { workspace = true }
constant_time_eq = { workspace = true }
crossbeam-channel = "0.5"
derive_more = { workspace = true }
directories = { workspace = true }
easy-cast = "0.5"
flate2 = "1"
futures = { workspace = true }
futures-util = { workspace = true }
gix = { version = "0.66", default-features = false, features = [
  "fast-sha1",
  "tracing",
  "parallel",
  "blob-diff",
  "revision",
] }
handlebars = { workspace = true }
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
http = "1.1"
httparse = "1.7"
humantime = "2.1"
itertools = "0.14.0"
k256 = { workspace = true }
kanal = "0.1.1"
lazy_static = "1.5.0"
libc = "0.2"
lightning-invoice = "0.33.2"
linkify = "0.10"
log = { workspace = true }
mailparse = "0.16.1"
md5 = "0.7"
moka = { version = "0.12.13", features = ["future"] }
num_cpus = "1.16.0"
once_cell = "1.21.3"
parking_lot = "0.12.3"
passwords = "3.1.16"
pbkdf2 = { version = "0.12", default-features = false, features = [
  "hmac",
  "sha2",
  "std",
] }
pretty_env_logger = "0.5.0"
qrcode = { version = "0.14.1", default-features = false }
rand = "0.8.5"
rand_core = { workspace = true }
ratatui = { workspace = true, default-features = false, features = ["macros"] }
regex = { workspace = true }
reqwest = { workspace = true }
rkyv = "0.8.14"
ron = "0.8.1"
russh = { version = "0.37.1", features = ["openssl"] }
russh-keys = "0.37.1"
rust-ini = "0.21.3"
scrypt = { version = "0.11.0" }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sha256 = "1.6.0"
shellexpand = "3.1.1"
shellwords = "1.1.0"
simdutf8 = "0.1.5"
simple_logger = { workspace = true }
sled = "0.34.7"
speedy = { version = "0.8.7" }
ssh-key = { version = "0.6.7", features = ["crypto", "encryption"] }
strip-ansi-escapes = "0.2.1"
structopt = "0.3.26"
tar = { version = "0.4.44", default-features = false }
tempfile = { workspace = true }
thiserror = "1.0"
thread-priority = { workspace = true }
time = { workspace = true }
timeago = { version = "0.4.2", default-features = false }
tiny-hderive = { workspace = true }
tiny_http = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.26.2", features = [
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = { workspace = true }
tower = { version = "0.5.3" }
tower-http = { workspace = true }
tower-layer = { workspace = true }
tower-service = "0.3.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree-sitter = "0.23.2"
tree-sitter-highlight = "0.23.2"
tree-sitter-language = "0.1.6"
tui-input = "0.14.0"
tui-textarea = "0.7.0"
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-truncate = { workspace = true }
unicode-width = { workspace = true }
unix_mode = "0.1.4"
ureq = { workspace = true }
url = { workspace = true }
urlencoding = { version = "2.1.3" }
uuid = { version = "1.20.0", features = ["v4"] }
v_htmlescape = { version = "0.15.8", features = ["bytes-buf"] }
walkdir = { workspace = true }
warp = { version = "0.3" }
webbrowser = { workspace = true }
xxhash-rust = { version = "0.8.12", features = ["const_xxh3"] }
yoke = { version = "0.7.1", features = ["derive"] }
zeroize = { workspace = true }

[dev-dependencies]
actix-test = { workspace = true }
serial_test = { workspace = true }
