[package]
name = "gnostr-web"
edition = "2021"
version.workspace = true
exclude.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.12.0", default-features = false }
axum = { version = "0.7", features = ["query", "tokio", "http1", "ws"] }
base64 = { workspace = true }
bytes = "1.5"
chrono = "0.4.40"
clap = { workspace = true }
comrak = { version = "0.28.0", default-features = false }
const-hex = "1.12"
flate2 = "1"
futures = "0.3"
futures-util = "0.3.31"
git2 = { version = "^0.20", default-features = false }
gix = { version = "0.66", default-features = false, features = [
  "fast-sha1",
  "tracing",
  "parallel",
  "blob-diff",
  "revision",
] }
gnostr-grammar = { workspace = true }
gnostr-js = { path = "../js", package = "gnostr-js" }
handlebars = { workspace = true }
humantime = "2.1"
httparse = "1.7"
md5 = "0.7"
ini = { package = "rust-ini", version = "0.21.1" }
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4"
rkyv = "0.8"
regex = "1.11.1"
rocksdb = { workspace = true }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
sha2 = { workspace = true }
simdutf8 = "0.1.5"
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.20"
tempfile = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "smallvec",
  "parking_lot",
  "fmt",
] }
tree-sitter-highlight = "0.23"
url = { workspace = true }
uuid = { version = "1.7", features = ["v4"] }
v_htmlescape = { version = "0.15", features = ["bytes-buf"] }
warp = { workspace = true }
webbrowser = { workspace = true }
xxhash-rust = { version = "0.8.12", features = ["const_xxh3"] }
yoke = { version = "0.7.1", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.100"
rsass = "0.28.0"
sha2 = { workspace = true }
