[package]
name = "gnostr-xq"
version = "0.0.3"
authors = ["gnostr <admin@gnostr.org>", "mi_sawa <mi.sawa.1216+git@gmail.com>"]
edition = "2021"
description = "gnostr-xq:A reimplementation of jq."
license = "MIT"
repository = "https://github.com/gnostr-org/gnostr"
homepage = "https://github.com/gnostr-org/gnostr"
readme = "README.md"
exclude = [".github"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "zip"

[package.metadata.release]
pre-release-hook = ["cargo", "update", "--manifest-path", "./fuzz/Cargo.toml", "-p", "gnostr-xq"]

[workspace]
members = [ "crates/*" ]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "gnostr-org/homebrew-gnostr-org"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true

[[bin]]
name = "gnostr-xq"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = ["anyhow", "clap", "clap-verbosity-flag", "simplelog", "serde_yaml"]

[dependencies]
anyhow = { version = "1.0.56", optional = true }
base64 = "0.13.0"
cast = "0.3.0"
clap = { version = "4.0.0", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "2.0.0", optional = true }

colored_json = "3.1.0"
derive_more = "0.99.17"
html-escape = "0.2.9"
imbl = "1.0.1"
is-terminal = "0.4.7"
itertools = "0.10.3"
log = "0.4.14"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
onig = { version = "6.3.1", default-features = false }
ordered-float = "2.10.0"
phf = { version = "0.10.1", features = ["macros"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = { version = "0.8.23", optional = true }
shell-escape = "0.1.5"
simplelog = { version = "0.12.0", optional = true }
sized-chunks = "0.6.5"
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["local-offset"] }
time-fmt = "0.3.4"
time-tz = { version = "0.5.2", features = ["system", "posix-tz"] }
urlencoding = "2.1.0"
xq-lang = { package = "gnostr-xq-lang", path = "./crates/lang", version = "0.0.1" }

[dev-dependencies]
criterion = "0.3.5"
trycmd = "0.13.3"

[[bench]]
name = "prelude"
harness = false

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1

[profile.dev.build-override]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

